# radarsubvenciones

./: .env.example  .gitignore  README.md  pyproject.toml
config/: calibracion_despacho.json
data/: clientes_produccion_template.csv  sample_companies.csv
docs/: CALIBRACION_DESPACHO.md  INVESTIGACION.md  MEMORIA_PROYECTO.md
docs/comercial/: EMAIL_VALIDACION_GESTORIA.md
src/ai_income_snapshot/: __init__.py  cli.py  config.py  jobs.py  models.py  pipeline.py  reporting.py  sales_process.py  utils.py  web_app.py
src/ai_income_snapshot/clients/: __init__.py  bdns_client.py  bocm_client.py  boe_client.py  http.py
src/ai_income_snapshot/intel/: __init__.py  contact_finder.py  dispatch_calibration.py  lead_explanations.py  matching.py  scoring.py  website_guesser.py  website_signals.py
src/ai_income_snapshot/templates/: index.html
templates/n8n/: radar_capital_publico.md
tests/: test_bdns_discovery.py  test_commercial_filters.py  test_contact_finder.py  test_dispatch_calibration.py  test_lead_explanations.py  test_matching.py  test_pipeline_bulletins.py  test_sales_process.py  test_scoring.py  test_web_app.py  test_website_guesser.py  test_website_signals.py
